update jupyter notebook and testtargetfile.txt

--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -122,7 +122,7 @@
    "source": [
     "#Load Parameters for RetSynth Run \n",
     "targets_path=\"testtargets.txt\"\n",
-    "output_path=\"testjupyter/\"\n",
+    "output_path=\"Results/\"\n",
     "output_html=True\n",
     "output_xlsx_format=False\n",
     "processors=4\n",
@@ -130,22 +130,22 @@
     "verbose=False\n",
     "\n",
     "#database parameters\n",
-    "generate_database=False\n",
-    "generate_database_constraints=False\n",
+    "generate_database=\"database.db\"\n",
+    "generate_database_constraints=\"database.constraints\"\n",
     "database=False\n",
     "database_constraints=False\n",
     "inchidb=True\n",
     "\n",
     "#database construction parameters\n",
-    "patric_models=False\n",
+    "patric_models=True\n",
     "patric_username=None\n",
     "patric_password=None\n",
     "patric_reaction_type=\"bio\"\n",
     "patric_media=\"Carbon-D-Glucose\"\n",
     "patric_sbml_output=False\n",
-    "patricfile=PATH+'/Database/data/PATRIC_genome_complete_07152018.csv'\n",
+    "patricfile='../rsgc/Database/data/PATRIC_genome_complete_07152018.csv'\n",
     "patric_models_already_built=False\n",
-    "metacyc=False\n",
+    "metacyc=True\n",
     "metacyc_addition=None\n",
     "metacyc_reaction_type=\"bio\"\n",
     "kegg=False\n",
