update/fix bugs in jupyter notebook docs/rsgc_jupyter.ipynb

--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -32,9 +32,9 @@
     "from IPython.display import HTML\n",
     "\n",
     "try:\n",
-    "    import pickle as cPickle\n",
+    "    import pickle\n",
     "except:\n",
-    "    import cPickle\n",
+    "    import cPickle as pickle\n",
     "import os\n",
     "import re\n",
     "import glob\n",
@@ -143,10 +143,10 @@
     "patric_reaction_type=\"bio\"\n",
     "patric_media=\"Carbon-D-Glucose\"\n",
     "patric_sbml_output=False\n",
-    "patricfile='../rsgc/Database/data/PATRIC_genome_complete_07152018.csv'\n",
+    "patricfile='PATRIC_genome_complete.csv'\n",
     "patric_models_already_built=False\n",
     "metacyc=True\n",
-    "metacyc_addition=None\n",
+    "metacyc_addition=\"\"\n",
     "metacyc_reaction_type=\"bio\"\n",
     "kegg=False\n",
     "kegg_reaction_type=\"bio\"\n",
@@ -179,6 +179,7 @@
     "multiple_solutions=str(True)\n",
     "cycles=str(True)\n",
     "run_tanimoto_threshold=False\n",
+    "tanimoto_threshold=1\n",
     "figures_chemdraw=False\n",
     "figures_graphviz=True\n",
     "show_rxn_info=False\n",
@@ -187,7 +188,7 @@
     "\n",
     "##Gene compatibility parameters\n",
     "gene_compatability=True\n",
-    "cai_threshold=0.5\n",
+    "cai_threshold=0.23\n",
     "user_cai_table=None"
    ]
   },
@@ -252,7 +253,7 @@
     "\n",
     "def run_flux_balance_analysis(target_info, ex_info, incpds_active,\n",
     "                              inrxns, media, ko,\n",
-    "                              output, DB, RP, verbose):\n",
+    "                              output, DB, verbose):\n",
     "    '''\n",
     "    Run flux balance analysis on target organism with added reactions\n",
     "    necessary to produce target compound\n",
@@ -260,7 +261,7 @@
     "    fba = bm.BuildModel(target_info[2], incpds_active, inrxns, DB, verbose, media)\n",
     "    opt_fba = ot.OptimizeTarget(target_info[0], target_info[2], fba.model, ex_info.temp_rxns,\n",
     "                                ex_info.temp_exmets, fba.compounds_dict, incpds_active,\n",
-    "                                inrxns, DB, verbose, ko, RP)\n",
+    "                                inrxns, DB, verbose, ko)\n",
     "    # print (opt_fba.fbasol.fluxes)\n",
     "    comparisonresults = cr.Compare(target_info[0], fba.solution, opt_fba.fbasol,\n",
     "                                   ex_info.temp_rxns, DB)\n",
@@ -383,6 +384,7 @@
     "        init_db.Createdb(generate_database, inchidb)\n",
     "        database = generate_database\n",
     "        new_db = True\n",
+    "        print (database)\n",
     "\n",
     "    elif database:\n",
     "        new_db = False\n",
@@ -463,6 +465,7 @@
     "        DB = Q.Connector(database)\n",
     "\n",
     "    ###GET TYPE OF REACTIONS TO BE USED IN THE ANALYSIS SO CORRECT CONTRAINT FILE IS GENERATED##\n",
+    "    print (database)\n",
     "    allcpds = DB.get_all_compounds()\n",
     "    if evaluate_reactions == 'all':\n",
     "        allrxns = DB.get_all_reactions()\n",
@@ -491,7 +494,7 @@
    "outputs": [],
    "source": [
     "#Read in target file and constraints files\n",
-    "def read_in_and_generate_output_files(database, targets_path):\n",
+    "def read_in_and_generate_output_files(database, targets_path, run_tanimoto_threshold):\n",
     "    '''Read in target input file and generate output files'''\n",
     "    DB = Q.Connector(database)\n",
     "    R = rt.Readfile(targets_path, DB, inchidb)\n",
@@ -656,8 +659,8 @@
     "    return IP\n",
     "\n",
     "#Run functions\n",
-    "targets, ignore_reactions, include_rxns, output, temp_imgs_PATH = read_in_and_generate_output_files(database, targets_path)\n",
-    "LP = retrieve_constraints(all_db_reactions, all_db_compounds, ignore_reactions, include_rxns, database)\n",
+    "targets, ignore_reactions, output, temp_imgs_PATH = read_in_and_generate_output_files(database, targets_path, run_tanimoto_threshold)\n",
+    "LP = retrieve_constraints(all_db_reactions, all_db_compounds, ignore_reactions, database)\n",
     "IP = construct_and_run_integerprogram(targets, output, database)\n"
    ]
   },
@@ -839,7 +842,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "HTML(output_path+\"/Results.html\")"
