update main codes to work with new database format

--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -381,7 +381,7 @@
     "        '''\n",
     "        Generate a database\n",
     "        '''\n",
-    "        init_db.Createdb(generate_database, inchidb)\n",
+    "        init_db.Createdb(generate_database)\n",
     "        database = generate_database\n",
     "        new_db = True\n",
     "        print (database)\n",
