update mmain codes and query.py code to work with database new format

--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -516,7 +516,7 @@
     "        verbose_print(verbose, 'STATUS:\\t{} tanimoto threshold being used'.format(float(tanimoto_threshold)*100))\n",
     "        cytosol_compartmentID = get_compartmentID_from_db(DB, 'cytosol')\n",
     "        extracell_compartmentID = get_compartmentID_from_db(DB, 'extracellular')\n",
-    "        SIM = ss.TanimotoStructureSimilarity(R.targets, DB.get_all_compounds(),\n",
+    "        SIM = ss.TanimotoStructureSimilarity(R.targets, database, DB.get_all_compounds_inchi(),\n",
     "                                             cytosol_compartmentID, extracell_compartmentID,\n",
     "                                             verbose, tanimoto_threshold)\n",
     "        OUTPUT.output_final_targets(SIM.finaltargets, tanimoto_threshold)\n",
