update jupyter notebook

--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -401,20 +401,12 @@
     "        bmcdb.Translate(database, metacyc_addition,\n",
     "                        inchidb, metacyc_reaction_type, verbose)\n",
     "\n",
-    "    if kegg and (patric_models or kbase or metacyc):\n",
+    "    if kegg:\n",
     "        #Add kegg repository database\n",
     "        BKD = bkeggdb.CompileKEGGIntoDB(database, kegg_organism_type,\n",
     "                                        inchidb, processors, kegg_number_of_organisms,\n",
     "                                        kegg_number_of_organism_pathways,\n",
     "                                        kegg_reaction_type, True)\n",
-    "\n",
-    "    elif kegg and not kbase and not patric_models and not metacyc:\n",
-    "        #Add kegg repository database\n",
-    "        print ('STATUS: Add only KEGG to RetSynth database')\n",
-    "        BKD = bkeggdb.CompileKEGGIntoDB(database, kegg_organism_type,\n",
-    "                                        inchidb, processors,\n",
-    "                                        kegg_number_of_organisms, kegg_number_of_organism_pathways,\n",
-    "                                        kegg_reaction_type, False)\n",
     "\n",
     "    if user_rxns_2_database:\n",
     "        #Add user identified reactions\n",
