--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -86,6 +86,7 @@
     "from rsgc.ShortestPath import constraints as co\n",
     "from rsgc.ShortestPath import integerprogram_pulp as ip_pulp\n",
     "from rsgc.Database import initialize_database as init_db\n",
+    "from rsgc.Database import build_kbase_db as bkdb\n",
     "from rsgc.Database import build_modelseed as bms\n",
     "from rsgc.Database import build_metacyc_db as bmcdb\n",
     "from rsgc.Database import build_user_rxns_db as burdb\n",
@@ -136,6 +137,8 @@
     "inchidb=True\n",
     "\n",
     "#database construction parameters\n",
+    "kbase=False\n",
+    "kbase_dump_directory=\"\"\n",
     "patric_models=True\n",
     "patric_username=None\n",
     "patric_password=None\n",
@@ -387,7 +390,12 @@
     "\n",
     "    elif database:\n",
     "        new_db = False\n",
-    "        database = database\n",
+    "    database = database\n",
+    "    if kbase:\n",
+    "        #Add kbase repository to database\n",
+    "        bkdb.BuildKbase(kbase_dump_directory, PATH+'/Database/data/KbasetoKEGGCPD.txt',\n",
+    "                        PATH+'/Database/data/KbasetoKEGGRXN.txt', inchidb,\n",
+    "                        database, \"bio\")\n",
     "\n",
     "    if patric_models:\n",
     "        #Add PATRIC repository to database\n",
