updatersgc_jupyter.ipynb

--- a/docs/rsgc_jupyter.ipynb
+++ b/docs/rsgc_jupyter.ipynb
@@ -498,7 +498,7 @@
     "        run_tanimoto_threshold = True\n",
     "        verbose_print(verbose, 'STATUS:\\tTarget not found in database. Trying to find structurally similar compounds')\n",
     "    temp_imgs_PATH = get_new_temp_imgs_folder(output_path, 0)\n",
-    "    OUTPUT = go.Output(DB, output_path, verbose, flux_balance_analysis, knockouts, timer_output, GC=gene_compatability)\n",
+    "    OUTPUT = go.Output(DB, output_path, media_for_FBA, verbose, flux_balance_analysis, knockouts, timer_output, GC=gene_compatability)\n",
     "    if run_tanimoto_threshold:\n",
     "        verbose_print(verbose, 'STATUS:\\t{} tanimoto threshold being used'.format(float(tanimoto_threshold)*100))\n",
     "        cytosol_compartmentID = get_compartmentID_from_db(DB, 'cytosol')\n",
